角色权限调整，不兼容旧数据

--- a/modules/server/src/main/resources/templates/user/role/dynamicData.html
+++ b/modules/server/src/main/resources/templates/user/role/dynamicData.html
@@ -49,6 +49,9 @@
             $(".layui-colla-item").each(function () {
                 var find = $(this).find(".layui-colla-content div");
                 var attr = find.attr("id");
+                if ($(this).is(":hidden")) {
+                    return;
+                }
                 try {
                     var checkData = tree.getChecked(attr);
                     var ts = attr.split("_");
