--- a/modules/server/src/main/resources/templates/node/ssh/file.html
+++ b/modules/server/src/main/resources/templates/node/ssh/file.html
@@ -4,262 +4,293 @@
 <head>
     <th:block th:include="common/head::head"></th:block>
     <style>
-        #btnDiv {
-            width: 240px;
-            height: 200px;
-            padding: 30px 10px 10px;
+        .header {
+            height: 50px;
         }
+
+        .filePath {
+            margin-top: 15px;
+            margin-left: 30px;
+            float: left;
+            font-size: 16px;
+        }
+
+        .btn_Div {
+            float: right;
+            width: 290px;
+            margin-right: 20px;
+        }
+
     </style>
 </head>
 <body>
-<form class="layui-form" action="" th:if="${dirs}">
-    <div class="layui-form-item">
-        <label class="layui-form-label">文件夹</label>
-        <div class="layui-input-block">
-            <select name="dir" lay-filter="dir" lay-verify="required" lay-search="" id="dir">
-                <option value="">请选择文件夹</option>
-                <option th:disabled="${dir.get('error')}"
-                        th:value="${dir.path}" th:each="dir : ${dirs}"
-                        th:text="${dir.path}"></option>
-            </select>
-        </div>
-    </div>
-    <div class="layui-form-item">
-        <label class="layui-form-label"></label>
-        <div class="layui-input-block" id="tree">
-        </div>
-    </div>
-</form>
-<div style="display: none">
-    <button type="button" id="uploadFile" class="layui-btn">上传文件</button>
+<div class="header">
+    <label class="filePath">
+        <label>文件路径：</label>
+        <label id="file_Path">/</label>
+    </label>
+    <label class="btn_Div">
+        <button type="button" id="goBack" class="layui-btn">返回上一级</button>
+        <button type="button" id="refresh" class="layui-btn">刷新</button>
+        <button type="button" id="uploadFile" class="layui-btn">上传文件</button>
+    </label>
 </div>
-<div class="layui-container" style="display: none;" id="btnDiv">
-    <form class="layui-form">
-        <div class="layui-form-item">
-            <button type="button" id="download" class="layui-btn layui-btn-fluid">下载</button>
-        </div>
-        <div class="layui-form-item">
-            <button type="button" id="tail" class="layui-btn layui-btn-fluid">文件终端</button>
-        </div>
-        <div class="layui-form-item">
-            <button type="button" id="delete" class="layui-btn layui-btn-fluid">删除</button>
-        </div>
-    </form>
-</div>
+<table class="layui-table" id="table" lay-filter="table" style="margin: 0;"></table>
 </body>
-
+<script type="text/html" id="bar_monitor">
+    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="download">下载</a>
+    <a href="javascript:;" class="layui-btn  layui-btn-sm  layui-btn-warm" lay-event="terminal">终端</a>
+    {{# if(!d.path){ }}
+    <a href="javascript:;" class="layui-btn  layui-btn-sm  layui-btn-danger" lay-event="delete">删除</a>
+    {{# } }}
+</script>
 <script type="text/javascript">
-    var nowPath;
     var id = getQueryString("id");
-    var tree;
-    var allData;
-    var clickData;
-    var openLayuiIndex;
-
-    function getData(path, children, preData) {
-        loadingAjax({
-            url: './list_file_data.json',
-            data: {
-                id: id,
-                path: path,
-                children: children,
-                parentIndexKey: preData && preData.parentIndexKey
-            },
-            success: function (data) {
-                if (data.code !== 200) {
-                    layer.msg(data.msg);
-                    return;
+    var pathArray = [];
+    var nowPath = '';
+    var rootPath;
+    var col = [
+        {field: 'name', title: '文件名称', event: 'rowClick'},
+        {
+            field: 'dir', title: '文件类型', event: 'rowClick', templet: function (d) {
+                if (d.dir) {
+                    return '文件夹';
                 }
-                let treeData = data.data;
-                let json = {
-                    title: '上传文件',
-                    parentDir: path,
-                    path: children,
-                    type: 'upload'
-                };
-                treeData.splice(0, 0, json);
-                if (!allData) {
-                    allData = treeData;
-                }
-                if (preData) {
-                    append(preData, treeData);
-                }
-                tree.reload("tree", {
-                    data: allData
-                })
+                return '文件';
             }
-        });
-    }
-
-    function append(preData, children) {
-        var parentIndexKey = preData.parentIndexKey + "";
-        var strings = parentIndexKey.split(",");
-        var findData = allData;
-        for (var i = 0; i < strings.length; i++) {
-            var index = parseInt(strings[i]) + 1;
-            if (i === strings.length - 1) {
-                var last = findData[index];
-                last.children = children;
-                last.spread = true;
-            } else {
-                findData = findData[index].children;
-            }
-        }
-    }
+        },
+        {field: 'size', title: '文件大小', event: 'rowClick'},
+        {field: 'modifyTime', title: '修改时间', event: 'rowClick'},
+        {field: 'op', title: '操作', align: 'center', toolbar: '#bar_monitor', fixed: 'right'}
+    ];
 
     function loadSuccess() {
-        form.on('select(dir)', function (data) {
-            var val = data.value;
-            if (!val || val === "") {
-                return;
-            }
-            getData(val, '');
-            nowPath = val;
-            allData = null;
-            // 缓存选择
-            layui.data('cache', {
-                key: "sshFileSelect",
-                value: val
-            });
-        });
-        const cache = layui.data('cache');
-        if (cache.sshFileSelect) {
-            var length = $('select[name="dir"] option[value="' + cache.sshFileSelect + '"]').length;
-            if (length >= 1) {
-                $("select[name='dir']").val(cache.sshFileSelect);
-                form.render();
-                getData(cache.sshFileSelect, '');
-            }
-        }
+        var successNum;
 
-        layui.use(['tree'], function () {
-            tree = layui.tree;
-            var uploadPtah = '';
+        loadRootPath();
 
-            tree.render({
-                elem: '#tree',
-                data: [],
-                id: "tree",
-                click: function (obj) {
-                    let data = obj.data;
-                    if ("upload" === data.type) {
-                        uploadPtah = data.path;
-                        $("#uploadFile").click();
-                        return;
-                    }
-                    if (!data.dir) {
-                        clickData = data;
-                        var btnDiv = $("#btnDiv");
-                        btnDiv.show();
-                        openLayuiIndex = layerOpen({
-                            type: 1,
-                            shade: [0.3, '#393D49'],
-                            title: false,
-                            content: btnDiv,
-                            shadeClose: true,
-                            cancel: function () {
-
-                            },
-                            end: function () {
-                                btnDiv.hide();
-                                clickData = null;
-                            }
-                        });
-                        return;
-                    }
-                    if (data.children && data.children.length > 0) {
-                        return;
-                    }
-                    getData(nowPath, data.parentDir, data);
-                }
-            });
-
-            var successNum;
-            //上传文件
-            uploadRender({
-                elem: '#uploadFile',
-                accept: 'file',
-                data: {
-                    id: id,
-                    name: function () {
-                        return uploadPtah;
-                    },
-                    path: function () {
-                        let val = nowPath;
-                        if (!val) {
-                            val = $("#dir").val();
-                        }
-                        return val;
-                    }
-                },
-                multiple: true,
-                url: './upload',
-                choose: function (obj) {
-                    successNum = 0;
-                },
-                allDone: function (obj) {
-                    layer.msg("文件总数：" + obj.total + " 成功上传：" + successNum + " 上传失败：" + obj.aborted);
-                },
-                done: function (res, index, upload) {
-                    if (res.code !== 200) {
-                        layer.msg(res.msg);
-                    } else {
-                        successNum++;
-                    }
-                }
-            });
-
-        });
-
-        $("#download").click(function () {
-            if (!clickData) {
-                return;
-            }
-            window.open("./download.html?id=" + id + "&path=" + nowPath + "&name=" + clickData.parentDir);
-            layer.close(openLayuiIndex);
-            layer.closeAll('page');
-        });
-
-        $("#delete").click(function () {
-            if (!clickData) {
-                return;
-            }
-            layer.confirm("确认删除" + clickData.name + "文件？", {
-                title: '系统提示'
-            }, function (index) {
-                //关闭所有页面层
-                layer.closeAll('page');
-                // 删除文件
-                loadingAjax({
-                    url: './delete.json',
-                    data: {
+        function reloadTable(path, children) {
+            loadPath();
+            table.reload('table',
+                {
+                    url: "./list_file_data.json",
+                    where: {
                         id: id,
-                        path: nowPath,
-                        name: clickData.parentDir
-                    },
-                    success: function (data) {
-                        layer.msg(data.msg);
-                        allData = null;
-                        getData(nowPath, '');
+                        path: path,
+                        children: children
                     }
                 });
-            });
+        }
 
-        });
-
-        $("#tail").click(function () {
-            if (!clickData) {
+        // 表格工具条事件
+        table.on('tool(table)', function (obj) {
+            var data = obj.data;
+            var event = obj.event;
+            if (!data) {
                 return;
             }
-            var tailPtah = nowPath + "/" + clickData.parentDir;
-            tabChange({
-                id: id + tailPtah,
-                url: './node/ssh/terminal.html?id=' + id + "&tail=" + tailPtah,
-                title: clickData.name + ' - 文件终端',
-            });
-            layer.close(openLayuiIndex);
-            layer.closeAll('page');
+            if ('download' === event) {
+                // 下载
+                if (!data.dir) {
+                    window.open("./download.html?id=" + id + "&path=" + rootPath + "&name=" + data.parentDir);
+                }
+            } else if ('terminal' === event) {
+                let parentDir = formatePath(data.parentDir);
+                var tailPtah = rootPath + parentDir;
+                if (!rootPath) {
+                    tailPtah = data.path;
+                }
+                tabChange({
+                    id: id + tailPtah,
+                    url: './node/ssh/terminal.html?id=' + id + "&tail=" + tailPtah,
+                    title: data.name + ' - 文件终端',
+                });
+            } else if ('delete' === event) {
+                let path = rootPath;
+                let name = data.parentDir;
+                if (!rootPath) {
+                    path = data.path;
+                    name = "";
+                }
+                let msg = "确认删除" + data.name + "文件？";
+                if (data.dir) {
+                    msg = "确认删除" + data.name + "文件夹及目录下所有文件？";
+                }
+                layer.confirm(msg, {
+                    title: '系统提示'
+                }, function (index) {
+                    //关闭所有页面层
+                    layer.closeAll('page');
+                    // 删除文件
+                    loadingAjax({
+                        url: './delete.json',
+                        data: {
+                            id: id,
+                            path: path,
+                            name: name
+                        },
+                        success: function (data) {
+                            layer.msg(data.msg);
+                            reloadTable(rootPath, nowPath);
+                        }
+                    });
+                });
+            } else if ("rowClick" === event) {
+                //表格行点击
+                if (data.dir) {
+                    let json = {
+                        name: data.name,
+                        path: data.parentDir
+                    };
+                    pathArray.push(json);
+                    if (data.path) {
+                        rootPath = data.path;
+                        reloadTable(rootPath, "/")
+                    } else {
+                        reloadTable(rootPath, data.parentDir)
+                    }
+                }
+            }
         });
+
+        //加载添加的白名单目录
+        function loadRootPath() {
+            let dirsStr = "[[${dirs}]]";
+            if (!dirsStr) {
+                return;
+            }
+            dirsStr = dirsStr.replace(/&quot;/g, "\"");
+            let dirs = JSON.parse(dirsStr);
+            for (let i = 0; i < dirs.length; i++) {
+                let dir = dirs[i];
+                let path = dir.path;
+                dir.dir = true;
+                dir.name = path;
+                dir.parentDir = "/";
+            }
+            tableRender({
+                id: 'table',
+                elem: '#table',
+                cols: [col],
+                data: dirs
+            });
+            loadPath();
+        }
+
+        //渲染路径
+        function loadPath() {
+            let dom = $("#file_Path");
+            if (pathArray.length === 0) {
+                dom.html('/');
+                return;
+            }
+            let htmlStr = '';
+            for (let i = 0; i < pathArray.length; i++) {
+                let item = pathArray[i];
+                let name = formatePath(item.name);
+                let path = item.path;
+                nowPath = path;
+                let str = "<label class=\"itemPath\" data-path=\"" + path + "\" title=\"" + rootPath + path + "\">" + name + "</label>";
+                if (i > 0) {
+                    htmlStr += "<label> > </label>";
+                }
+                htmlStr += str;
+            }
+            dom.html(htmlStr);
+        }
+
+        //路径点击事件
+        $('#file_Path').on('click', '.itemPath', function () {
+            let _this = $(this);
+            let path = _this.attr('data-path');
+            let len = pathArray.length;
+            for (let i = 0; i < len; i++) {
+                let item = pathArray[i];
+                if (!item) {
+                    break;
+                }
+                let itemPath = formatePath(item.path);
+                path = formatePath(path);
+                if (path === itemPath) {
+                    pathArray.splice(i + 1, len - i);
+                }
+            }
+            loadPath();
+            reloadTable(rootPath, path);
+        });
+
+        //上传文件
+        uploadRender({
+            elem: '#uploadFile',
+            accept: 'file',
+            data: {
+                id: id,
+                name: function () {
+                    return nowPath;
+                },
+                path: function () {
+                    return rootPath;
+                }
+            },
+            multiple: true,
+            url: './upload',
+            choose: function (obj) {
+                successNum = 0;
+            },
+            allDone: function (obj) {
+                if (rootPath) {
+                    reloadTable(rootPath, nowPath);
+                }
+                layer.msg("文件总数：" + obj.total + " 成功上传：" + successNum + " 上传失败：" + obj.aborted);
+            },
+            done: function (res, index, upload) {
+                if (res.code !== 200) {
+                    layer.msg(res.msg);
+                } else {
+                    successNum++;
+                }
+            }
+        });
+
+        //返回上一级
+        $("#goBack").click(function () {
+            let len = pathArray.length;
+            if (len === 0) {
+                return;
+            } else if (len === 1) {
+                rootPath = null;
+                pathArray = [];
+                loadRootPath();
+                return;
+            }
+            let item = pathArray[len - 2];
+            let path = item.path;
+            reloadTable(rootPath, path);
+            pathArray.splice(len - 1, 1);
+            loadPath();
+        });
+
+        $("#refresh").click(function () {
+            if (rootPath) {
+                reloadTable(rootPath, nowPath);
+            } else {
+                window.location.reload();
+            }
+        });
+    }
+
+    function formatePath(path) {
+        if (!startWith(path, "/") && !startWith(path, "\\")) {
+            path = "/" + path;
+        }
+        return path;
+    }
+
+    function startWith(str, suffix) {
+        if (typeof str == 'string') {
+            return str.slice(0, suffix.length) == suffix;
+        }
+        return false;
     }
 </script>
 </html>
