--- a/modules/server/src/main/resources/templates/node/ssh/file.html
+++ b/modules/server/src/main/resources/templates/node/ssh/file.html
@@ -38,10 +38,12 @@
 <table class="layui-table" id="table" lay-filter="table" style="margin: 0;"></table>
 </body>
 <script type="text/html" id="bar_monitor">
-    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="download">下载</a>
     <a href="javascript:;" class="layui-btn  layui-btn-sm  layui-btn-warm" lay-event="terminal">终端</a>
     {{# if(!d.path){ }}
     <a href="javascript:;" class="layui-btn  layui-btn-sm  layui-btn-danger" lay-event="delete">删除</a>
+    {{# } }}
+    {{# if(!d.dir){ }}
+    <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="download">下载</a>
     {{# } }}
 </script>
 <script type="text/javascript">
@@ -165,7 +167,7 @@
                 let dir = dirs[i];
                 let path = dir.path;
                 dir.dir = true;
-                dir.name = path;
+                dir.name = path + "【文件夹】";
                 dir.parentDir = "/";
             }
             tableRender({
